--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Belajar Git Pemula</h1>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio inventore eaque, architecto accusamus, voluptate ratione dolorem hic doloremque eum asperiores perferendis. Consequatur eligendi, illo explicabo eum minima provident sapiente magnam.
 </body>
 </html>
